<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="35dp">

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <EditText
        android:id="@+id/mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/share_edit"
        android:hint="@string/mail"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/sign_in"></EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:background="@drawable/share_edit"
        android:hint="@string/password"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/mail"></EditText>

    <CheckBox
        android:id="@+id/checkbox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        app:layout_constraintTop_toBottomOf="@+id/password"></CheckBox>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        app:layout_constraintBottom_toBottomOf="@+id/checkbox1"
        app:layout_constraintLeft_toRightOf="@id/checkbox1"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot"

        app:layout_constraintBottom_toBottomOf="@+id/checkbox1"

        app:layout_constraintRight_toRightOf="parent"></TextView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/share_box"
        android:paddingHorizontal="80dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/just_sign"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox1"></Button>

    <TextView
        android:id="@+id/just_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/just_sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"></TextView>

</androidx.constraintlayout.widget.ConstraintLayout>