<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="35dp">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.45"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:text="@string/sign_in"
            android:textSize="25sp"
            android:textStyle="bold"

            ></TextView>

        <EditText

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:background="@drawable/share_edit"
            android:hint="@string/mail"
            android:padding="10dp">

        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="30dp"
            android:layout_weight="0.3"
            android:background="@drawable/share_edit"
            android:hint="@string/password"
            android:padding="10dp"></EditText>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"


            ></CheckBox>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:text="@string/remember"></TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="right"
            android:text="@string/forgot"></TextView>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="80dp"
            android:layout_weight="0.6"
            android:background="@drawable/share_box"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="20sp"></Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_weight="0.4"
            android:text="@string/just_sign"

            ></TextView>

    </LinearLayout>


</LinearLayout>
