<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/android"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <ImageView
        android:id="@+id/mainview"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:src="@drawable/ic_baseline_directions_bike_24"
        app:layout_constraintTop_toBottomOf="@+id/android"></ImageView>

    <TextView
        android:id="@+id/number_posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="125"
        app:layout_constraintLeft_toRightOf="@+id/mainview"
        app:layout_constraintRight_toLeftOf="@+id/number_followers"
        app:layout_constraintTop_toTopOf="@+id/number_following"></TextView>

    <TextView
        android:id="@+id/posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/posts"
        app:layout_constraintLeft_toRightOf="@+id/mainview"
        app:layout_constraintRight_toLeftOf="@+id/number_followers"
        app:layout_constraintTop_toBottomOf="@+id/number_posts"></TextView>

    <TextView
        android:id="@+id/number_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="20K"
        app:layout_constraintLeft_toRightOf="@+id/number_posts"
        app:layout_constraintRight_toLeftOf="@id/number_following"
        app:layout_constraintTop_toTopOf="@+id/number_following"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers"
        app:layout_constraintLeft_toRightOf="@+id/number_posts"
        app:layout_constraintRight_toLeftOf="@id/number_following"
        app:layout_constraintTop_toBottomOf="@+id/number_followers"></TextView>

    <TextView
        android:id="@+id/number_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="22"
        app:layout_constraintLeft_toRightOf="@+id/number_followers"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/mainview"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/following"
        app:layout_constraintLeft_toRightOf="@+id/number_followers"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_following"></TextView>

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/username"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/mainview"></TextView>

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/username"></TextView>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/address"></TextView>

    <ImageView
        android:id="@+id/image1.1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_directions_bike_24"
        app:layout_constraintBottom_toTopOf="@+id/image3.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"></ImageView>

    <ImageView
        android:id="@+id/image1.2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_directions_bike_24"
        app:layout_constraintLeft_toRightOf="@+id/image1.1"
        app:layout_constraintRight_toLeftOf="@+id/image1.3"
        app:layout_constraintTop_toBottomOf="@+id/description"></ImageView>

    <ImageView
        android:id="@+id/image1.3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_directions_bike_24"
        app:layout_constraintLeft_toRightOf="@+id/image1.2"
        app:layout_constraintRight_toLeftOf="@+id/image1.4"
        app:layout_constraintTop_toBottomOf="@+id/description"></ImageView>

    <ImageView
        android:id="@+id/image1.4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_directions_bike_24"
        app:layout_constraintLeft_toRightOf="@+id/image1.3"
        app:layout_constraintRight_toLeftOf="@+id/image1.5"
        app:layout_constraintTop_toBottomOf="@+id/description"></ImageView>

    <ImageView
        android:id="@+id/image1.5"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_directions_bike_24"
        app:layout_constraintLeft_toRightOf="@+id/image1.4"
        app:layout_constraintRight_toLeftOf="@+id/image1.6"
        app:layout_constraintTop_toBottomOf="@+id/description"></ImageView>

    <ImageView
        android:id="@+id/image1.6"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_directions_bike_24"
        app:layout_constraintLeft_toRightOf="@+id/image1.5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"></ImageView>

    <ImageView
        android:id="@+id/image3.1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_baseline_directions_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image1.1"></ImageView>

    <TextView
        android:id="@+id/text2.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image3.1"></TextView>


    <ImageView
        android:id="@+id/image3.2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_baseline_phone_callback_24"
        app:layout_constraintLeft_toRightOf="@+id/image3.1"
        app:layout_constraintRight_toLeftOf="@id/image3.3"
        app:layout_constraintTop_toBottomOf="@+id/image1.1"></ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/call"
        app:layout_constraintLeft_toRightOf="@+id/image3.1"
        app:layout_constraintRight_toLeftOf="@id/image3.3"
        app:layout_constraintTop_toBottomOf="@+id/image3.2"></TextView>

    <ImageView
        android:id="@+id/image3.3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_baseline_star_24"
        app:layout_constraintLeft_toRightOf="@+id/image3.2"
        app:layout_constraintRight_toLeftOf="@id/image3.4"
        app:layout_constraintTop_toBottomOf="@+id/image1.1"></ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintLeft_toRightOf="@+id/image3.2"
        app:layout_constraintRight_toLeftOf="@id/image3.4"
        app:layout_constraintTop_toBottomOf="@+id/image3.3"></TextView>

    <ImageView
        android:id="@id/image3.4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_baseline_web_24"
        app:layout_constraintLeft_toRightOf="@+id/image3.3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image1.1"></ImageView>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/website"
        app:layout_constraintLeft_toRightOf="@+id/image3.3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image3.4"></TextView>

    <ImageView
        android:id="@+id/image1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_directions_bike_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image3.1"></ImageView>

    <ImageView
        android:id="@+id/image2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_local_dining_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/image1"
        app:layout_constraintRight_toLeftOf="@+id/image3"
        app:layout_constraintTop_toBottomOf="@+id/image3.1"></ImageView>

    <ImageView
        android:id="@+id/image3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_folder_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image3.1"></ImageView>

</androidx.constraintlayout.widget.ConstraintLayout>